# haval

./: .clang-format  .gitattributes  CMakeLists.txt  COPYING.BSD  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  config-h.in  configure  configure.in  haval-config.cmake.in  haval.c  haval.cpp  haval.h  haval.hpp  havalapp.c  havalapp.cpp  havalapp.h  havaltest.c  havaltest.cpp
.github/workflows/: ci.yml
include/: CMakeLists.txt  haval-qt.h  haval-qt.hpp  haval.h  haval.hpp  havalver.h.in
src/: CMakeLists.txt  havalapp.cpp
test/: CMakeLists.txt  havaltest-qt.cpp  havaltest.cpp
